--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   "dependencies": {
     "bootstrap-vue": "^2.0.4",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "linkifyjs": "^2.1.8",
     "lodash.escape": "^4.0.1",
     "nuxt": "^2.0.0",
     "scrollparent": "^2.0.1",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "webpack-archive-plugin": "^3.0.0"
   },
   "devDependencies": {
@@ -34,6 +37,7 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-vue": "^6.0.0",
     "node-sass": "^4.13.0",
+    "nodemon": "^1.19.4",
     "prettier": "^1.18.2",
     "sass-loader": "^8.0.0"
   }
